--- a/plugin/cricket-litzscore/views/lz-cricket.css
+++ b/plugin/cricket-litzscore/views/lz-cricket.css
@@ -97,6 +97,9 @@
   padding: 0px 5px;
   background-color: #f5f5f5;
 }
+.lz-theme-green-red.lz-season {
+  padding-right: 10px;
+}
 .lz-theme-green-red .table {
   float: none;
   position: static;
@@ -117,6 +120,9 @@
 }
 .lz-theme-green-red ul li {
   list-style: none;
+}
+.lz-theme-green-red div {
+  font-size: inherit;
 }
 @media (max-width: 480px) {
   .lz-theme-green-red .table > thead > tr > th,
@@ -440,4 +446,110 @@
 }
 .lz.lz-match .lz-teams ol {
   margin: 5px 10px;
+}
+.lz.lz-season a {
+  color: inherit;
+}
+.lz.lz-season a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+.lz.lz-season .lz-season-filter select {
+  margin-bottom: 10px;
+}
+.lz.lz-season .match-col {
+  padding-bottom: 30px;
+  padding-right: 10px;
+}
+.lz.lz-season .match-col .a-match {
+  background-color: #F9F9F9;
+}
+.lz.lz-season .match-col .a-match .match-head {
+  text-align: center;
+  font-size: 12px;
+  line-height: 40px;
+}
+.lz.lz-season .match-col .a-match .match-info {
+  padding: 20px 10px;
+  text-align: center;
+}
+.lz.lz-season .match-col .a-match .match-info .team-flag-a,
+.lz.lz-season .match-col .a-match .match-info .team-flag-b {
+  width: 50px;
+  float: left;
+  background-color: #F3F3F3;
+  padding: 5px;
+  padding-top: 15px;
+}
+.lz.lz-season .match-col .a-match .match-info .team-flag-a {
+  float: left;
+}
+.lz.lz-season .match-col .a-match .match-info .team-flag-b {
+  float: right;
+}
+.lz.lz-season .match-col .a-match .match-info .team-name-a,
+.lz.lz-season .match-col .a-match .match-info .team-name-b {
+  margin-left: 55px;
+  margin-right: 55px;
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+.lz.lz-season .match-col .a-match .match-info .team-vs-txt {
+  width: 20px;
+  height: 20px;
+  line-height: 22px;
+  border-radius: 50%;
+  background-color: #9C9C9C;
+  color: #fff;
+  margin: auto;
+  font-size: 8px;
+  text-align: center;
+}
+@media (max-width: 480px) {
+  .lz.lz-season .match-col .a-match .match-info {
+    padding: 10px 10px;
+  }
+  .lz.lz-season .match-col .a-match .match-info .match-info-flags {
+    width: 40px;
+    float: right;
+  }
+  .lz.lz-season .match-col .a-match .match-info .team-flag-a,
+  .lz.lz-season .match-col .a-match .match-info .team-flag-b {
+    width: 30px;
+    margin: 5px;
+    padding: 0;
+    display: block;
+    margin-bottom: 10px;
+  }
+  .lz.lz-season .match-col .a-match .match-info .match-info-text {
+    margin-right: 45px;
+  }
+  .lz.lz-season .match-col .a-match .match-info .team-name-a,
+  .lz.lz-season .match-col .a-match .match-info .team-name-b {
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: left;
+    line-height: 37px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 37px;
+  }
+  .lz.lz-season .match-col .a-match .match-info .team-vs-txt {
+    margin-left: 5px;
+  }
+}
+.lz.lz-season .match-col .a-match .match-foot {
+  overflow: hidden;
+  font-size: 12px;
+  text-align: center;
+  line-height: 30px;
+  background-color: transparent;
+  border-top: 1px solid #f1eded;
+  border-bottom: 1px solid #f1eded;
+}
+@media (max-width: 480px) {
+  .lz.lz-season .match-col .a-match .match-foot {
+    font-size: 8px;
+  }
 }
